--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container-main">
+
       <div class="container-header">
         <div class="row justify-content-between align-items-center">
           <div class="col-6">
@@ -153,7 +154,7 @@
           </div>
           </div>
         </div>
-        <h6>This project was coded by Emanuela Pietrobelli and is open-sourced on GitHub</h6>
+        <h6>This project was coded by Emanuela Pietrobelli and is open-sourced on <a href="https://github.com/emanuelapietrobelli/weather_forecast" target="_blank"> Github </a></h6>
       </div>
       
 
