add shadow style to .container-main

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Weather Forecast</title>
   </head>
   <body>
-    <div class="container-main">
+    <div class="container-main shadow-sm">
 
       <div class="container-header">
         <div class="row justify-content-between align-items-center">
