--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container-header">
         <div class="row justify-content-between align-items-center">
           <div class="col-6">
-            <h3 id="condition-description">Weather Forecast</h3>
+            <h3 id="condition-description"></h3>
             <h4 id="display-current-date">Friday 03, March 2023</h4>
           </div>
 
