change icon to API icon + icon style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2 id="city-name"></h2>
           </div>
           <div class="col-2 icon">
-            <img src="images/sun_icon.svg" class="img-fluid" alt="sun icon" />
+            <img src="images/sun_icon.svg" id="main-icon" class="img-fluid" alt="sun icon" />
           </div>
           <div class="col"></div>
         </div>
