improved search engine

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
           <div class="col-5">
             <form id= "search-city-form"> 
               <input           
-                type="city"
+                type="search"
                 class="form-control"
-               placeholder="Search another city"
-                id="search-city-input" 
+                placeholder="Search another city"
+                id="search-city-input"
+                autocomplete="off"
                 required
               />
               </form>
@@ -51,7 +52,7 @@
             <h2 id="city-name"></h2>
           </div>
           <div class="col-2 icon">
-            <img src="images/sun_icon.svg" id="main-icon" class="img-fluid" alt="sun icon" />
+            <img src="" id="main-icon" class="img-fluid" alt="sun icon" />
           </div>
           <div class="col"></div>
         </div>
