implement Temperature convert Units

--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
               <h5>Humidity</h5>
               <h3 id="humidity"></h3>
             </div>
-            <div class="col temp-col">
-          
-              <span class="temperature" id="temperature"></span><span class="units">˚C |˚F</span>
-            
+            <div class="col current-temperature">
+              <span class="temperature" id="temperature"></span>
+              <span class="units"><a href="#" id="celcius-link" class="active">˚C</a> |<a href="#" id="fahrenheit-link" class="non-active">˚F</a></span>
             </div>
             <div class="col align-padding">
               <h5>Wind</h5>
