edit HTML forecast to inject data in JS later

--- a/index.html
+++ b/index.html
@@ -88,85 +88,21 @@
 
         <div class="container overflow-hidden text-center">
           <div class="row gx-4">
-            <div class="col next-days">
-              <div class="days shadow-sm bg-body-tertiary">
-                <h5>
-                  Mon <br />
-                  <br />
+            <div class="col-2 next-days">
+
+              <div class="days-box shadow-sm bg-body-tertiary">
+                <h5>Mon</h5>
+
                   <img
                     src="images/sun_icon.svg"
-                    class="img-fluid"
+                    class="icon-forecast img-fluid"
                     alt="sun icon"
                   />
-                  <br />
-                  <br />
-                  27˚
-                </h5>
+                  <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max"> 27˚</span>
+                </div>  
               </div>
-            </div>
-            <div class="col next-days">
-              <div class="days shadow-sm bg-body-tertiary">
-                <h5>
-                  Mon <br />
-                  <br />
-                  <img
-                    src="images/sun_icon.svg"
-                    class="img-fluid"
-                    alt="sun icon"
-                  />
-                  <br />
-                  <br />
-                  27˚
-                </h5>
-              </div>
-            </div>
-            <div class="col next-days">
-              <div class="days shadow-sm bg-body-tertiary">
-                <h5>
-                  Mon <br />
-                  <br />
-                  <img
-                    src="images/sun_icon.svg"
-                    class="img-fluid"
-                    alt="sun icon"
-                  />
-                  <br />
-                  <br />
-                  27˚
-                </h5>
-              </div>
-            </div>
-            <div class="col next-days">
-              <div class="days shadow-sm bg-body-tertiary">
-                <h5>
-                  Mon <br />
-                  <br />
-                  <img
-                    src="images/sun_icon.svg"
-                    class="img-fluid"
-                    alt="sun icon"
-                  />
-                  <br />
-                  <br />
-                  27˚
-                </h5>
-              </div>
-            </div>
-            <div class="col next-days">
-              <div class="days shadow-sm bg-body-tertiary">
-                <h5>
-                  Mon <br />
-                  <br />
-                  <img
-                    src="images/sun_icon.svg"
-                    class="img-fluid"
-                    alt="sun icon"
-                  />
-                  <br />
-                  <br />
-                  27˚
-                </h5>
-              </div>
+              
             </div>
           </div>
         </div>
