forecast - concatenate html in javascript

--- a/index.html
+++ b/index.html
@@ -86,25 +86,7 @@
           </div>
         </div>
 
-        <div class="container overflow-hidden text-center">
-          <div class="row gx-4">
-            <div class="col-2 next-days">
-
-              <div class="days-box shadow-sm bg-body-tertiary">
-                <h5>Mon</h5>
-
-                  <img
-                    src="images/sun_icon.svg"
-                    class="icon-forecast img-fluid"
-                    alt="sun icon"
-                  />
-                  <div class="weather-forecast-temperatures">
-                  <span class="weather-forecast-temperature-max"> 27˚</span>
-                </div>  
-              </div>
-              
-            </div>
-          </div>
+        <div class="container overflow-hidden text-center" id="forecast">
         </div>
         <h6>
           This project was coded by Emanuela Pietrobelli and is open-sourced on
