display forecast data using the API, style forecast colums

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <div class="container overflow-hidden text-center" id="forecast">
+        <div class="container" id="forecast">
         </div>
         <h6>
           This project was coded by Emanuela Pietrobelli and is open-sourced on
