remove unit conversion (fahrenheit)
because It's to complex to build at the moment and display it on the forecast, but i will try to build it later with react :)

--- a/index.html
+++ b/index.html
@@ -69,14 +69,7 @@
               </div>
               <div class="col current-temperature">
                 <span class="temperature" id="temperature"></span>
-                <span class="units"
-                  ><a href="#" id="celcius-link" class="active">˚C</a> |<a
-                    href="#"
-                    id="fahrenheit-link"
-                    class="non-active"
-                    >˚F</a
-                  ></span
-                >
+                <span class="units">˚C</span>
               </div>
               <div class="col align-padding">
                 <h5>Wind</h5>
