remove unit conversion, style containers and add Alt icon description

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Weather Forecast</title>
   </head>
   <body >
+    
     <div class="container-main shadow-sm">
       <div class="container-header">
         <div class="row justify-content-between align-items-center">
@@ -49,7 +50,7 @@
             </form>
           </div>
         </div>
-        <div class="container">
+        <div class="container city-name">
           <div class="row city-icon">
             <div class="col text-align-left align-self-end">
               <h2 id="city-name"></h2>
@@ -94,5 +95,6 @@
     </div>
 
     <script src="src/script.js"></script>
+  
   </body>
 </html>
