--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="src/styles.css" />
     <title>Weather Forecast</title>
   </head>
-  <body >
-    
+  <body>
     <div class="container-main shadow-sm">
       <div class="container-header">
         <div class="row justify-content-between align-items-center">
@@ -80,10 +79,15 @@
           </div>
         </div>
 
-        <div class="container" id="forecast">
-        </div>
+        <div class="container" id="forecast"></div>
         <h6>
-          This project was coded by Emanuela Pietrobelli and is open-sourced on
+          This project was coded by
+          <a
+            href="https://www.linkedin.com/in/emanuelapietrobelli/"
+            target="_blank"
+            >Emanuela Pietrobelli
+          </a>
+          and is open-sourced on
           <a
             href="https://github.com/emanuelapietrobelli/weather_forecast"
             target="_blank"
@@ -95,6 +99,5 @@
     </div>
 
     <script src="src/script.js"></script>
-  
   </body>
 </html>
